# haskell-api-prototype

./: .gitignore  README.md  api-prototype.cabal
src/Example/: Main.hs
src/Example/Api/: Common.Hs
src/Example/Api/Resources/: Home.hs  Index.hs  People.hs  Person.hs  User.hs
src/Network/Api/Rest/: Context.hs  Error.hs  Handlers.hs  Routing.hs  Validate.hs
src/Network/Api/Rest/Authorization/: Jwt.hs
src/Network/Api/Rest/Validation/: JsonPath.hs  JsonValidator.hs  ParameterValidator.hs
